# python_project_templ

./: .gitignore  README.md  pyproject.toml
